<resources>
    <string name="app_name">SpotifyTest</string>
    <string name="client_id">f92c05bbc5cc42e99bed7d421b89efc7</string>
    <string name="redirect_uri">"com.bsav157.spotifytest://callback"</string>
    <string name="login">LOG IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_your_favorite_artist">Search your favorite artist</string>
    <string name="search">Search</string>
    <string name="artist_name">artist name</string>
    <string name="followers">followers:\u0020</string>
    <string name="number_followers">1,609,567</string>
    <string name="number_popularity">15 of 100</string>
    <string name="albums">albums</string>
    <string name="popularity">popularity:\u0020</string>
    <string name="available_in">Available in</string>
    <string name="album_name">album name</string>
    <string name="open_in_spotify">Open in spotify</string>

</resources>